--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,20 @@
-black==22.6.0
+APScheduler==3.9.1
+black==22.8.0
+certifi==2022.9.24
+charset-normalizer==2.1.1
 click==8.1.3
+colorclass==2.2.2
+colorhash==1.1.0
+configparser==5.3.0
+docopt==0.6.2
 Flask==2.1.3
 Flask-JWT-Extended==4.4.3
 flask-marshmallow==0.14.0
+Flask-MonitoringDashboard==3.1.1
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.2
 gunicorn==20.1.0
+idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
@@ -14,15 +23,24 @@ marshmallow-sqlalchemy==0.28.1
 mypy-extensions==0.4.3
 mysql==0.0.3
 mysqlclient==2.1.1
+numpy==1.23.3
 packaging==21.3
 passlib==1.7.4
 pathspec==0.9.0
+pip-upgrader==1.4.15
 platformdirs==2.5.2
+psutil==5.9.2
 PyJWT==2.4.0
 PyMySQL==1.0.2
 pyparsing==3.0.9
 python-dotenv==0.20.0
+pytz==2022.4
+requests==2.28.1
+scipy==1.9.1
 six==1.16.0
 SQLAlchemy==1.4.39
+terminaltables==3.1.10
 tomli==2.0.1
+tzlocal==2.0.0
+urllib3==1.26.12
 Werkzeug==2.1.2
